--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Printing Output</title>
+</head>
+<body>
+    <h1>Printing Output</h1>
+    <script src="./js/printing-output.js"></script>
+</body>
 
+</html>
